[package]
name = "clubdam-shopsearch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
derive_more = { version = "1.0.0", features = ["full"] }
env_logger = "0.11.5"
fs-err = "2.11.0"
log = "0.4.22"
once_cell = "1.19.0"
regex = "1.10.6"
reqwest = "0.12.7"
scraper = "0.20.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["time", "rt-multi-thread", "macros"] }
url = "2.5.2"
